--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -10,3 +10,6 @@
 @import 'footer';
 @import 'media-queries';
 @import 'scrollbar';
+
+// Import Google Font
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
