--- a/CSS/compiled_style.css
+++ b/CSS/compiled_style.css
@@ -111,6 +111,7 @@ nav .nav-right a:hover {
 /* Smaller Articles */
 .smaller-articles {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -138,6 +139,117 @@ a {
   transition: color 0.3s;
 }
 a:hover {
+  filter: brightness(0.9);
+}
+
+article {
+  width: 80%;
+  margin: 50px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+article img {
+  width: 500px;
+  height: 700px;
+  object-fit: cover;
+}
+article .text-content {
+  width: 75ch;
+  margin: auto 20px;
+}
+article h1 {
+  font-size: 2.5rem;
+  color: var(--secondary-font-color);
+  margin: 20px 0;
+}
+article h2 {
+  color: var(--secondary-font-color);
+}
+article p {
+  font-size: 1.2rem;
+  color: var(--primary-font-color);
+}
+
+/* Image Variations */
+.centered-image-article img {
+  width: 100%;
+  max-height: 45vh;
+  margin-bottom: 30px;
+}
+
+.left-image-article {
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.right-image-article {
+  flex-direction: row-reverse;
+  align-items: flex-start;
+}
+
+.featured-article-skeleton {
+  margin-bottom: 50px;
+}
+
+.article-skeleton {
+  flex: 1;
+  margin: 0 15px;
+  background: var(--box-shadow-container);
+  box-shadow: var(--box-shadow);
+  padding: 20px;
+  border-radius: 8px;
+}
+.article-skeleton .skeleton-image, .article-skeleton .skeleton-line {
+  background: linear-gradient(90deg, var(--skeleton-bg-start), var(--skeleton-bg-start), var(--skeleton-bg-start));
+  background-size: 200% 100%;
+  animation: shimmer 1.5s infinite;
+}
+.article-skeleton .skeleton-image.skeleton-image, .article-skeleton .skeleton-line.skeleton-image {
+  height: 300px;
+}
+.article-skeleton .skeleton-image.skeleton-line, .article-skeleton .skeleton-line.skeleton-line {
+  height: 25px;
+  margin-bottom: 15px;
+}
+.article-skeleton .skeleton-image.skeleton-line--large, .article-skeleton .skeleton-line.skeleton-line--large {
+  height: 40px;
+  margin: 40px auto;
+}
+
+.hidden {
+  display: none;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: var(--secondary-font-color);
+  padding: 20px 0;
+  font-size: 1.2rem;
+}
+footer small {
+  text-align: center;
+}
+footer .social-icons {
+  margin-top: 10px;
+}
+footer .social-icons a {
+  margin: 0 10px;
+  color: var(--secondary-font-color);
+  font-size: 1.5rem;
+}
+footer .social-icons a:hover {
   filter: brightness(0.9);
 }
 
