--- a/SCSS/_articles.scss
+++ b/SCSS/_articles.scss
@@ -20,6 +20,7 @@
 
 .smaller-articles {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
 
 
@@ -41,13 +42,63 @@
 }
 
 
-    a {
-        text-decoration: none;
-        color: var(--primary-color);
-        transition: color 0.3s;
+a {
+    text-decoration: none;
+    color: var(--primary-color);
+    transition: color 0.3s;
 
-        &:hover {
-            filter: brightness(0.9);
-        }
+    &:hover {
+        filter: brightness(0.9);
     }
-    
+}
+
+article {
+    width: 80%;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    img {
+        width: 500px;
+        height: 700px; 
+        object-fit: cover;
+    }
+
+    .text-content {
+        width: 75ch;
+        margin: auto 20px;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+        color: var(--secondary-font-color);
+        margin: 20px 0;
+    }
+
+    h2 {
+        color: var(--secondary-font-color);
+    }
+
+    p {
+        font-size: 1.2rem;
+        color: var(--primary-font-color);
+    }
+}
+
+/* Image Variations */
+.centered-image-article img {
+    width: 100%;
+    max-height: 45vh;
+    margin-bottom: 30px;
+}
+
+.left-image-article {
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.right-image-article {
+    flex-direction: row-reverse;
+    align-items: flex-start;
+}
