--- a/SCSS/_mixins.scss
+++ b/SCSS/_mixins.scss
@@ -6,3 +6,9 @@
     padding: 20px;
     border-radius: 8px;
 }
+
+@mixin flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
