added scss styling

--- a/SCSS/_skeleton.scss
+++ b/SCSS/_skeleton.scss
@@ -1,34 +1,33 @@
-
-
+/* Skeleton Styles */
 .featured-article-skeleton {
     margin-bottom: 50px;
 }
-
+  
 .article-skeleton {
-    @include article; 
+    @include article;
+}
+  
+.skeleton-image, .skeleton-line {
+    background: linear-gradient(
+        90deg,
+        var(--skeleton-bg-start),
+        var(--skeleton-bg-middle),
+        var(--skeleton-bg-end)
+      );
+    background-size: 200% 100%;
+    animation: shimmer 1.5s infinite;
 
-    .skeleton-image, .skeleton-line {
-        background: linear-gradient(
-            90deg,
-                var(--skeleton-bg-start),
-                var(--skeleton-bg-start),
-                var(--skeleton-bg-start)
-            );
-        background-size: 200% 100%;
-        animation: shimmer 1.5s infinite;
+    &.skeleton-image {
+        height: 300px;
+    }
 
-        &.skeleton-image {
-            height: 300px;
-        }
+    &.skeleton-line {
+        height: 25px;
+        margin-bottom: 15px;
 
-        &.skeleton-line {
-            height: 25px;
-            margin-bottom: 15px;
-
-            &--large {
-                height: 40px;
-                margin: 40px auto;
-            }
+        &--large {
+        height: 40px;
+        margin: 40px auto;
         }
     }
 }
@@ -37,11 +36,12 @@
     display: none;
 }
 
+/* Shimmer Animation */
 @keyframes shimmer {
     0% {
-        background-position: -200% 0;
+      background-position: -200% 0;
     }
     100% {
-        background-position: 200% 0;
+      background-position: 200% 0;
     }
 }
