--- a/SCSS/_articles.scss
+++ b/SCSS/_articles.scss
@@ -1,104 +1,98 @@
 /* Featured Article Styles */
 .featured-article {
     margin-bottom: 50px;
-
+  
     h1 {
-        font-size: 2.5rem;
-        margin: 15px 0;
-        color: var(--secondary-font-color);
+      font-size: 2.5rem;
+      color: var(--secondary-font-color);
+      margin: 15px 0;
     }
-
+  
     p {
-        font-size: 1.2rem;
-        color: var(--primary-font-color);
-        margin-bottom: 20px;
+      font-size: 1.2rem;
+      color: var(--primary-font-color);
+      margin-bottom: 20px;
     }
-
-}
-
-/* Smaller Articles */
-
-.smaller-articles {
+  }
+  
+  /* Smaller Articles Styles */
+  .smaller-articles {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-
-
-}
-
-.article {
+  }
+  
+  .article {
     @include article;
-
+  
     h2 {
-        font-size: 1.8rem;
-        margin: 15px 0;
-        color: var(--secondary-font-color);
+      font-size: 1.8rem;
+      color: var(--secondary-font-color);
+      margin: 15px 0;
     }
-
+  
     p {
-        font-size: 1rem;
-        color: var(--primary-font-color);
+      font-size: 1rem;
+      color: var(--primary-font-color);
     }
-}
-
-
-a {
+  }
+  
+  a {
     text-decoration: none;
     color: var(--primary-color);
     transition: color 0.3s;
-
+  
     &:hover {
-        filter: brightness(0.9);
+      filter: brightness(0.9);
     }
-}
-
-article {
+  }
+  
+  article {
     width: 80%;
     margin: 50px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+  
     img {
-        width: 500px;
-        height: 700px; 
-        object-fit: cover;
+      width: 500px;
+      height: 700px; 
+      object-fit: cover;
     }
-
+  
     .text-content {
-        width: 75ch;
-        margin: auto 20px;
+      width: 75ch;
+      margin: auto 20px;
     }
-
+  
     h1 {
-        font-size: 2.5rem;
-        color: var(--secondary-font-color);
-        margin: 20px 0;
+      font-size: 2.5rem;
+      color: var(--secondary-font-color);
+      margin: 20px 0;
     }
-
+  
     h2 {
-        color: var(--secondary-font-color);
+      color: var(--secondary-font-color);
     }
-
+  
     p {
-        font-size: 1.2rem;
-        color: var(--primary-font-color);
+      font-size: 1.2rem;
+      color: var(--primary-font-color);
     }
-}
-
-/* Image Variations */
-.centered-image-article img {
+  }
+  
+  /* Image Variations */
+  .centered-image-article img {
     width: 100%;
     max-height: 45vh;
     margin-bottom: 30px;
-}
-
-.left-image-article {
+  }
+  
+  .left-image-article {
     flex-direction: row;
     align-items: flex-start;
-}
-
-.right-image-article {
+  }
+  
+  .right-image-article {
     flex-direction: row-reverse;
     align-items: flex-start;
-}
+  }
